实现输入未知数和点并显示

--- a/index.html
+++ b/index.html
@@ -14,40 +14,41 @@
 </head>
 
 <body>
+<h1>输入数据</h1>
 <div>
-    <h1>输入数据</h1>
-    <div class="inline-block-div">
+    <div class="left-div">
         <h2>设未知数</h2>
         <label for="symbol-name">名字</label>
         <input id="symbol-name" placeholder="小写英文字母或希腊字母的英文拼写_下标" style="width: 250px;">
         <br>
-        <input type="radio" name="symbol-sign" checked="checked">任意实数
-        <input type="radio" name="symbol-sign">正数
-        <input type="radio" name="symbol-sign">负数
+        <input type="radio" name="symbol-sign" value="R" checked="checked">任意实数
+        <input type="radio" name="symbol-sign" value="+">正数
+        <input type="radio" name="symbol-sign" value="-">负数
         <br>
-        <button id="create-symbol">创建</button>
+        <button id="create-symbol" py-click="create_symbol">确定</button>
     </div>
-    <div class="inline-block-div">
+    <div class="right-div">
         <h2>已有的未知数</h2>
-        <div id="symbols"></div>
+        <ul id="symbols"></ul>
     </div>
 </div>
 <div>
-    <div class="inline-block-div">
-        <h2>设点坐标</h2>
+    <div class="left-div">
+        <h2>创建或修改点</h2>
         <label for="point-name">名字</label>
-        <input id="point-name" placeholder="大写英文字母_下标" oninput="onPointNameInput()">
+        <input id="point-name" placeholder="大写英文字母_下标">
         <br>
         坐标 (<input id="point-x" placeholder="x 表达式">, <input id="point-y" placeholder="y 表达式">)
         <br>
-        <button id="create-point">创建</button>
+        <button id="create-point" py-click="create_point">确定</button>
     </div>
-    <div class="inline-block-div">
+    <div class="right-div">
         <h2>已有的点</h2>
         <ul id="points"></ul>
     </div>
 </div>
-<script src="./src/ui.js"></script>
+<script type="py" src="./src/ui.py" config="./pyscript.json"></script>
+<div id="output"></div>
 </body>
 
 </html>
